--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 				<div class="header__articles">
 					<article class="header-article">
-						<div class="header-article__wrap" style="background: url('img/1.png');">
+						<div class="header-article__wrap" style="background-image: url('img/1.jpg');">
 							<div class="header-article__country">
 								<img src="img/Ukraine.jpg" alt="Ukraine" title="Ukraine">
 							</div>
@@ -66,10 +66,10 @@
 					</article>
 
 					<article class="header-article">
-						<div class="header-article__wrap" style="background: url('img/2.png');">
+						<div class="header-article__wrap" style="background-image: url('img/2.jpg');">
 							<div class="header-article__content">
 								<h2 class="header-article__title">Babi yar: topography of terror</h2>
-								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit possimus tempora porro sunt harum cum distinctio ve.</p>
+								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit possimus tempora porro sunt ha.</p>
 								<a href="#" class="btn header-article__btn">I want to read</a>
 							</div>
 
@@ -81,10 +81,10 @@
 					</article>
 
 					<article class="header-article">
-						<div class="header-article__wrap" style="background: url('img/3.png');">
+						<div class="header-article__wrap" style="background-image: url('img/1.jpg');">
 							<div class="header-article__content">
 								<h2 class="header-article__title">Babi yar: topography of terror</h2>
-								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit possimus tempora porro sunt harum cum distinctio ve.</p>
+								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit possimus tempora porro sunt ha.</p>
 								<a href="#" class="btn header-article__btn">I want to read</a>
 							</div>
 
@@ -96,7 +96,7 @@
 					</article>
 
 					<article class="header-article">
-						<div class="header-article__wrap" style="background: url('img/4.png');">
+						<div class="header-article__wrap" style="background-image: url('img/2.jpg');">
 							<div class="header-article__content">
 								<h2 class="header-article__title">Babi yar: topography of terror</h2>
 								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit possimus tempora porro sunt harum cum distinctio ve.</p>
