--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 				</div>
 
 				<div class="header__articles">
-					<article class="header-article">
-						<div class="header-article__wrap" style="background-image: url('img/1.jpg');">
+					<article class="header-article" style="background-image: url('img/1.jpg');">
+						<div class="header-article__wrap">
 							<div class="header-article__country">
 								<img src="img/Ukraine.jpg" alt="Ukraine" title="Ukraine">
 							</div>
@@ -65,8 +65,8 @@
 						</div>
 					</article>
 
-					<article class="header-article">
-						<div class="header-article__wrap" style="background-image: url('img/2.jpg');">
+					<article class="header-article" style="background-image: url('img/2.jpg');">
+						<div class="header-article__wrap">
 							<div class="header-article__content">
 								<h2 class="header-article__title">Babi yar: topography of terror</h2>
 								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit possimus tempora porro sunt ha.</p>
@@ -80,8 +80,8 @@
 						</div>
 					</article>
 
-					<article class="header-article">
-						<div class="header-article__wrap" style="background-image: url('img/1.jpg');">
+					<article class="header-article" style="background-image: url('img/1.jpg');">
+						<div class="header-article__wrap">
 							<div class="header-article__content">
 								<h2 class="header-article__title">Babi yar: topography of terror</h2>
 								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit possimus tempora porro sunt ha.</p>
@@ -95,8 +95,8 @@
 						</div>
 					</article>
 
-					<article class="header-article">
-						<div class="header-article__wrap" style="background-image: url('img/2.jpg');">
+					<article class="header-article" style="background-image: url('img/2.jpg');">
+						<div class="header-article__wrap">
 							<div class="header-article__content">
 								<h2 class="header-article__title">Babi yar: topography of terror</h2>
 								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit possimus tempora porro sunt harum cum distinctio ve.</p>
@@ -175,19 +175,3 @@
 	<script src="js/main.js"></script>
 </body>
 </html>
-
-<!-- Burger -->
-
-<!-- <div class="burger">
-	<div class="burger__btn" id="burger_btn">
-		<span class="burger__line"></span>
-		<span class="burger__line"></span>
-		<span class="burger__line"></span>
-	</div>
-	<div class="burger__bg"></div>
-
-	<ul class="burger__menu">
-		<li><a href="#" title="Home" class="burger__link">Home</a></li>
-		<li><span class="burger__link _scroll-to _s-">Home</span></li>
-	</ul>
-</div> -->
