--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 							<div class="header-article__content">
 								<h2 class="header-article__title">Babi yar</h2>
-								<p class="header-article__excerpt">Lorem ipsum dolor. Tempora porro sunt harum cum distinctio veniam blanditiis voluptates. Veniam blanditiis voluptates.</p>
+								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit.</p>
 								<a href="#" class="btn header-article__btn">I want to read</a>
 							</div>
 
@@ -99,7 +99,7 @@
 						<div class="header-article__wrap">
 							<div class="header-article__content">
 								<h2 class="header-article__title">Babi yar: topography of terror</h2>
-								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit possimus tempora porro sunt harum cum distinctio ve.</p>
+								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit possimus tempora porro sunt ha.</p>
 								<a href="#" class="btn header-article__btn">I want to read</a>
 							</div>
 
