--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 		<div class="scroll-dots" id="scroll-dots"></div>
 
+		<!-- Nav -->
+
+		
+
 		<!-- Header -->
 
 		<header class="header" id="header">
-			<!-- Nav -->
-
-			
-
 			<!-- Header Content -->
 
 			<div class="header__body">
@@ -47,7 +47,7 @@
 
 				<div class="header__articles">
 					<article class="header-article" style="background-image: url('img/1.jpg');">
-						<div class="header-article__wrap">
+						<a href="#" class="header-article__wrap">
 							<div class="header-article__country">
 								<img src="img/Ukraine.jpg" alt="Ukraine" title="Ukraine">
 							</div>
@@ -55,59 +55,59 @@
 							<div class="header-article__content">
 								<h2 class="header-article__title">Babi yar</h2>
 								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit.</p>
-								<a href="#" class="btn header-article__btn">I want to read</a>
+								<div class="btn header-article__btn">I want to read</div>
 							</div>
 
 							<div class="header-article__info">
 								<p class="header-article__views">1840 Views</p>
 								<p class="header-article__date">6 November 2020</p>
 							</div>
-						</div>
+						</a>
 					</article>
 
 					<article class="header-article" style="background-image: url('img/2.jpg');">
-						<div class="header-article__wrap">
+						<a href="#" class="header-article__wrap">
 							<div class="header-article__content">
 								<h2 class="header-article__title">Babi yar: topography of terror</h2>
 								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit possimus tempora porro sunt ha.</p>
-								<a href="#" class="btn header-article__btn">I want to read</a>
+								<div class="btn header-article__btn">I want to read</div>
 							</div>
 
 							<div class="header-article__info">
 								<p class="header-article__views">1840 Views</p>
 								<p class="header-article__date">6 November 2020</p>
 							</div>
-						</div>
+						</a>
 					</article>
 
 					<article class="header-article" style="background-image: url('img/1.jpg');">
-						<div class="header-article__wrap">
+						<a href="#" class="header-article__wrap">
 							<div class="header-article__content">
 								<h2 class="header-article__title">Babi yar: topography of terror</h2>
 								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit possimus tempora porro sunt ha.</p>
-								<a href="#" class="btn header-article__btn">I want to read</a>
+								<div class="btn header-article__btn">I want to read</div>
 							</div>
 
 							<div class="header-article__info">
 								<p class="header-article__views">1840 Views</p>
 								<p class="header-article__date">6 November 2020</p>
 							</div>
-						</div>
+						</a>
 					</article>
 
 					<article class="header-article" style="background-image: url('img/2.jpg');">
-						<div class="header-article__wrap">
+						<a href="#" class="header-article__wrap">
 							<div class="header-article__content">
 								<h2 class="header-article__title">Babi yar: topography of terror</h2>
 								<p class="header-article__excerpt">Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Suscipit possimus tempora porro sunt ha.</p>
-								<a href="#" class="btn header-article__btn">I want to read</a>
+								<div class="btn header-article__btn">I want to read</div>
 							</div>
 
 							<div class="header-article__info">
 								<p class="header-article__views">1840 Views</p>
 								<p class="header-article__date">6 November 2020</p>
 							</div>
-						</div>
+						</a>
 					</article>
 				</div>
 			</div>
@@ -121,7 +121,12 @@
 					<div class="scroll-block__body">
 						<h2 class="scroll-block__title">I WOULD TAKE YOU TO BREATHTAKING PLACES OF THE WWII</h2>
 						<p class="scroll-block__text">I offer you a unique perspective to look at the historical WW2 sites, then and today. Not only to read about the places of battles, about concentration camps, assembly halls but to manage your own travel in areas that are interesting for you personally, as one who is keen on the topic of the Second World War.</p>
-						<a href="#" class="btn btn_transparent scroll-block__btn">I want to know more</a>
+						<div class="scroll-block__paragraph">
+							<p class="scroll-block__subtext">The first direction of my travel experience are the places of the Second World War of the “peace period”. They are, first of all, the historical parts of European cities associated with important events or personalities of European history. Walking towards the places of Adolf Hitler in Vienna and Munich, observing buildings from the time of the Third Reich in Nuremberg, walking the motorcade routes of high-ranking officials, halls for conferences and speeches, the graves of the field commanders or post-war museums. The topics of these articles reveal the story from a deeper perspective, offering a broader view of the people who initiated and maintained the war and those who participated in it by someone else's will. All sorts of World War II museums and memorials around the world present an endless interest for everyone interested.</p>
+							<p class="scroll-block__subtext">Apart theme in my understanding is the places associated with the Holocaust and war crimes. Visiting former Nazi concentration camps in Germany, Holocaust death camps in Poland, places of mass executions in Ukraine, I do not limit myself to excerpts from books or informational booklets. The motivation for me is an attempt to understand a particular place, its history, and geography, including post-war events. Museums and memorial complexes serve as an aid for self-education in the subject of the Holocaust, offering us material evidence of the worst crime in history. Even where only grass, ruins and a memorial tablet remained from the former place of memory, you can find a reason to study history in an interesting way and share it with others.</p>
+							<p class="scroll-block__subtext">Another direction of my travels are the WW2 battlefields today, military museums, monuments to soldiers and former military leaders, WW2 buildings today. In contrast to all sorts of tours, where the route is usually limited to a pair of mandatory points, I try to explore thoroughly the history and geography of each location, each of ww2 sites then and now. Present the scale of what happened, get acquainted with the preserved evidence, examine the maximum sources. Articles from such places arouse their strong interest in military history.</p>
+						</div>
+						<div class="btn btn_transparent scroll-block__btn">I want to know more</div>
 					</div>
 				</div>
 			</div>
@@ -139,7 +144,12 @@
 					<div class="scroll-block__body">
 						<h2 class="scroll-block__title">HISTORY BOOKS OF THE APPRAISED AUTHORS WOULD GUIDE US THROUGH THE PAGES OF THE WWII</h2>
 						<p class="scroll-block__text">Best WW2 Books nonfiction. After 1945, the world has witnessed thousands of ww2 books, the revelation of the collections of documents, published diaries, trophy military archives, court records (for example, materials of the Nuremberg Trial), analytical works, encyclopedias. These World War Two books represent the work and opinions of people who have been witnesses, participants or victims of the conflict, or works of professional historians, journalists, and writers. The general volume of these ww2 history books with military literature covers from one hundred pages to many volumes, which continue to be translated into dozens of languages, reprinted, updated and criticized for their misjudgments.</p>
-						<a href="#" class="btn btn_transparent btn_transparent_w scroll-block__btn">I want to know more</a>
+						<div class="scroll-block__paragraph">
+							<p class="scroll-block__subtext">The first direction of my travel experience are the places of the Second World War of the “peace period”. They are, first of all, the historical parts of European cities associated with important events or personalities of European history. Walking towards the places of Adolf Hitler in Vienna and Munich, observing buildings from the time of the Third Reich in Nuremberg, walking the motorcade routes of high-ranking officials, halls for conferences and speeches, the graves of the field commanders or post-war museums. The topics of these articles reveal the story from a deeper perspective, offering a broader view of the people who initiated and maintained the war and those who participated in it by someone else's will. All sorts of World War II museums and memorials around the world present an endless interest for everyone interested.</p>
+							<p class="scroll-block__subtext">Apart theme in my understanding is the places associated with the Holocaust and war crimes. Visiting former Nazi concentration camps in Germany, Holocaust death camps in Poland, places of mass executions in Ukraine, I do not limit myself to excerpts from books or informational booklets. The motivation for me is an attempt to understand a particular place, its history, and geography, including post-war events. Museums and memorial complexes serve as an aid for self-education in the subject of the Holocaust, offering us material evidence of the worst crime in history. Even where only grass, ruins and a memorial tablet remained from the former place of memory, you can find a reason to study history in an interesting way and share it with others.</p>
+							<p class="scroll-block__subtext">Another direction of my travels are the WW2 battlefields today, military museums, monuments to soldiers and former military leaders, WW2 buildings today. In contrast to all sorts of tours, where the route is usually limited to a pair of mandatory points, I try to explore thoroughly the history and geography of each location, each of ww2 sites then and now. Present the scale of what happened, get acquainted with the preserved evidence, examine the maximum sources. Articles from such places arouse their strong interest in military history.</p>
+						</div>
+						<div class="btn btn_transparent btn_transparent_w scroll-block__btn">I want to know more</div>
 					</div>
 				</div>
 			</div>
@@ -157,7 +167,12 @@
 					<div class="scroll-block__body">
 						<h2 class="scroll-block__title">MINDFUL DOCUMENTARIES WOULD FUEL YOUR INSIGHT INTO THE HISTORY</h2>
 						<p class="scroll-block__text">For the last decades, the world saw thousands of different kinds of documentary films about the Second World War. WW2 footage generally differs in quality, the selection of archival cadres, the credibility of specialists involved. A lifetime is not enough to watch them all, but we have enough for the most famous works. WW2 documentaries can be conditionally divided by different criteria, including duration, as not everyone is ready to watch ten hours of military newsreels or interviews with former veterans. Within my WAR-DOCUMENTARY blog, you will find a thorough analysis of the most recognizable and often cited documentary projects on the theme of the Second World War.</p>
-						<a href="#" class="btn btn_transparent btn_transparent_w scroll-block__btn">I want to know more</a>
+						<div class="scroll-block__paragraph">
+							<p class="scroll-block__subtext">The first direction of my travel experience are the places of the Second World War of the “peace period”. They are, first of all, the historical parts of European cities associated with important events or personalities of European history. Walking towards the places of Adolf Hitler in Vienna and Munich, observing buildings from the time of the Third Reich in Nuremberg, walking the motorcade routes of high-ranking officials, halls for conferences and speeches, the graves of the field commanders or post-war museums. The topics of these articles reveal the story from a deeper perspective, offering a broader view of the people who initiated and maintained the war and those who participated in it by someone else's will. All sorts of World War II museums and memorials around the world present an endless interest for everyone interested.</p>
+							<p class="scroll-block__subtext">Apart theme in my understanding is the places associated with the Holocaust and war crimes. Visiting former Nazi concentration camps in Germany, Holocaust death camps in Poland, places of mass executions in Ukraine, I do not limit myself to excerpts from books or informational booklets. The motivation for me is an attempt to understand a particular place, its history, and geography, including post-war events. Museums and memorial complexes serve as an aid for self-education in the subject of the Holocaust, offering us material evidence of the worst crime in history. Even where only grass, ruins and a memorial tablet remained from the former place of memory, you can find a reason to study history in an interesting way and share it with others.</p>
+							<p class="scroll-block__subtext">Another direction of my travels are the WW2 battlefields today, military museums, monuments to soldiers and former military leaders, WW2 buildings today. In contrast to all sorts of tours, where the route is usually limited to a pair of mandatory points, I try to explore thoroughly the history and geography of each location, each of ww2 sites then and now. Present the scale of what happened, get acquainted with the preserved evidence, examine the maximum sources. Articles from such places arouse their strong interest in military history.</p>
+						</div>
+						<div class="btn btn_transparent btn_transparent_w scroll-block__btn">I want to know more</div>
 					</div>
 				</div>
 			</div>
